<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/myDarkBack"
              android:layout_height="match_parent"
              tools:context="mary.breathingtraining.view.activities.MainActivity">

    <TextView
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            android:textColor="@color/myWhite"
            android:text="@string/gimnastika"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            android:textColor="@color/myWhite"
            android:text="@string/strelnikovoy"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/myPink">

        <TextView
                style="@style/SelectableItemBackgroundPink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:textColor="@color/myWhite"
                android:textSize="16dp"
                android:onClick="onClickStart"
                android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/myLightBack">

        <TextView
                style="@style/SelectableItemBackgroundLightBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tutorial"
                android:textColor="@color/myWhite"
                android:textSize="16dp"
                android:onClick="onClickTutorial"
                android:gravity="center"/>
    </LinearLayout>


</LinearLayout>