<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/myDarkBack"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/myPink"
            android:textSize="24dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="28"
                android:inputType="textCapSentences"
                android:textColor="@color/myWhite"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:id="@+id/confirmEx"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/myPink">

        <TextView
                style="@style/SelectableItemBackgroundPink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:textColor="@color/myWhite"
                android:textSize="16dp"
                android:onClick="onClickConfirmTitle"
                android:gravity="center"/>
    </LinearLayout>

    <TextView
            android:text="@string/program_in_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/myWhite"
            android:id="@+id/textView4"
            android:textSize="15dp"/>
</LinearLayout>