<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/myDarkBack"
                tools:context="mary.breathingtraining.view.activities.TimerActivity">

    <RelativeLayout
            android:id="@+id/timerArea"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@color/myLightBack"
            android:layout_alignParentBottom="true">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progress_countdown"
                style="@style/Widget.MaterialProgressBar.ProgressBar"
                android:minWidth="300dp"
                android:minHeight="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:progressBackgroundTint="@color/myDarkBack"
                app:mpb_showProgressBackground="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>

        <TextView
                tools:text="10"
                android:textSize="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_countdown"
                android:textColor="@color/myWhite"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/progress_countdown"
                android:layout_marginBottom="110dp"/>

        <TextView
                android:text="@string/rest"
                android:textSize="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_rest"
                android:textColor="@color/myWhite"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/progress_countdown"
                android:layout_marginBottom="125dp"/>


        <ImageButton
                style="@style/SelectableItemBackgroundDarkBack"
                android:id="@+id/fab_pause"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_pause"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:onClick="onClickPauseButton"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>


        <ImageButton
                style="@style/SelectableItemBackgroundDarkBack"
                android:id="@+id/fab_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_play"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:onClick="onClickPlayButton"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>

        <ImageButton
                style="@style/SelectableItemBackgroundDarkBack"
                android:id="@+id/fab_soundOff"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_volume_off"
                android:layout_alignParentBottom="true"
                android:onClick="onClickSoundOffButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"/>

        <ImageButton
                style="@style/SelectableItemBackgroundDarkBack"
                android:id="@+id/fab_soundOn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_volume_on"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:onClick="onClickSoundOnButton"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"/>

    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/upperArea"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/myDarkBack"
            android:layout_above="@id/timerArea">

        <ImageView
                android:id="@+id/exerciseImage"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/shagi"
                tools:src="@drawable/shagi"/>

        <TextView
                android:id="@+id/exerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="40dp"
                android:textSize="30dp"
                android:textColor="@color/myWhite"
                tools:text="Ладошки"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/finishView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/myDarkBack"
            android:visibility="gone"
            tools:visibility="invisible">

        <ImageView
                android:id="@+id/heart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:src="@drawable/ic_heart"
                tools:src="@drawable/ic_heart"/>


        <TextView
                android:id="@+id/finishText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/myWhite"
                android:layout_marginTop="180dp"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:text="@string/vivipolnili"/>

        <TextView
                android:id="@+id/finishText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/myWhite"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/finishText1"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:text="@string/vse_uprazhneniya"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/finishText2"
                android:layout_marginTop="30dp"
                android:background="@color/myLightBack">

            <TextView
                    style="@style/SelectableItemBackgroundLightBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/finish"
                    android:textColor="@color/myWhite"
                    android:textSize="16dp"
                    android:onClick="onClickFinish"
                    android:gravity="center"/>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
